# protobuf_comm

./: Makefile
etc/buildsys/: buildtype.mk  config.mk  genpkgconfig.mk  rules.mk
etc/buildsys/btypes/: config_sysinstall.mk  config_syswide.mk  rules_sysinstall.mk  rules_syswide.mk
src/: Makefile
src/protobuf_comm/: CMakeLists.txt  Makefile  package.xml  protobuf_comm.pc  version.h
